force-app/main/default/objects/Opportunity/fields/Portal_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Portal_Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field us used to indicate who from the client is the designated Portal Admin for their license.</description>
    <inlineHelpText>This field us used to indicate who from the client is the designated Portal Admin for their license.</inlineHelpText>
    <label>Portal Admin Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Portal Admin Contact)</relationshipLabel>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>