force-app/main/default/objects/Opportunity/fields/Potential_Partner_Match__c.field-meta.xml
<CustomField>
    <fullName>Potential_Partner_Match__c</fullName>
    <label>Potential Partner Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Not a match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>