force-app/main/default/objects/Opportunity/fields/Prepayment_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Invoice__c</fullName>
    <label>Prepayment Invoice #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>