force-app/main/default/objects/Opportunity/fields/Prepayment_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Invoice_Amount__c</fullName>
    <label>Prepayment Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>