force-app/main/default/objects/Opportunity/fields/Primary_Document__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document__c</fullName>
    <label>Primary Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>