force-app/main/default/objects/Opportunity/fields/Primary_Document_Title__c.field-meta.xml
<CustomField>
    <fullName>Primary_Document_Title__c</fullName>
    <label>Primary Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>