force-app/main/default/objects/Opportunity/fields/Principal_Change_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Principal_Change_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Change Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Principal Change Advisor)</relationshipLabel>
    <relationshipName>OpportunitiesQRt2</relationshipName>
    <type>Lookup</type>
</CustomField>