force-app/main/default/objects/Opportunity/fields/Producer_Lead_Generator__c.field-meta.xml
<CustomField>
    <fullName>Producer_Lead_Generator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TSS Lead Generator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Producer Lead Generator)</relationshipLabel>
    <relationshipName>Opportunities7</relationshipName>
    <type>Lookup</type>
</CustomField>