force-app/main/default/objects/Opportunity/fields/Product_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Product_Ordered__c</fullName>
    <label>Product Ordered</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>