force-app/main/default/objects/Opportunity/fields/Production_Notes__c.field-meta.xml
<CustomField>
    <fullName>Production_Notes__c</fullName>
    <label>Production Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>