force-app/main/default/objects/Opportunity/fields/Program_Requested_timeframe__c.field-meta.xml
<CustomField>
    <fullName>Program_Requested_timeframe__c</fullName>
    <label>Program Requested Timeframe</label>
    <type>TextArea</type>
</CustomField>