force-app/main/default/objects/Opportunity/fields/Program_times__c.field-meta.xml
<CustomField>
    <fullName>Program_times__c</fullName>
    <inlineHelpText>Enter Standard or specify any changes to the schedule</inlineHelpText>
    <label>Program times</label>
    <length>255</length>
    <type>Text</type>
</CustomField>