force-app/main/default/objects/Opportunity/fields/Progtype_Code__c.field-meta.xml
<CustomField>
    <fullName>Progtype_Code__c</fullName>
    <label>Progtype Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADVIMM</fullName>
            </value>
            <value>
                <fullName>ADVISORY</fullName>
            </value>
            <value>
                <fullName>AGILE</fullName>
            </value>
            <value>
                <fullName>AUDIT</fullName>
            </value>
            <value>
                <fullName>CERTIFICAT</fullName>
            </value>
            <value>
                <fullName>CONSCERT</fullName>
                <isActive>false</isActive>
                <label>CONSCERT</label>
            </value>
            <value>
                <fullName>CONSULTING</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>DPRWKSHP</fullName>
            </value>
            <value>
                <fullName>ECMBOOT</fullName>
            </value>
            <value>
                <fullName>EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>EXPERIENCE</fullName>
            </value>
            <value>
                <fullName>FUNDAMENTL</fullName>
            </value>
            <value>
                <fullName>LEADING</fullName>
            </value>
            <value>
                <fullName>MANAGER</fullName>
            </value>
            <value>
                <fullName>MAP</fullName>
            </value>
            <value>
                <fullName>NONPROGRAM</fullName>
            </value>
            <value>
                <fullName>PARTAGILE</fullName>
            </value>
            <value>
                <fullName>PARTCERT</fullName>
            </value>
            <value>
                <fullName>PARTECM</fullName>
            </value>
            <value>
                <fullName>PARTEXP</fullName>
            </value>
            <value>
                <fullName>PARTTTT</fullName>
            </value>
            <value>
                <fullName>PRACTITION</fullName>
            </value>
            <value>
                <fullName>PROGSPPRT</fullName>
            </value>
            <value>
                <fullName>SPEAKENG</fullName>
            </value>
            <value>
                <fullName>SPONSOR</fullName>
            </value>
            <value>
                <fullName>TAKING</fullName>
            </value>
            <value>
                <fullName>TTT</fullName>
            </value>
            <value>
                <fullName>TTT1</fullName>
            </value>
            <value>
                <fullName>TTT2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>