force-app/main/default/objects/Opportunity/fields/Prospective_Participant__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Participant__c</fullName>
    <label>Prospective Participant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>