force-app/main/default/objects/Opportunity/fields/PSA_Generated__c.field-meta.xml
<CustomField>
    <fullName>PSA_Generated__c</fullName>
    <label>PSA Generated</label>
    <type>Date</type>
</CustomField>