force-app/main/default/objects/Opportunity/fields/PSA_Received_signed_PSA__c.field-meta.xml
<CustomField>
    <fullName>PSA_Received_signed_PSA__c</fullName>
    <label>PSA - Received signed PSA</label>
    <type>Date</type>
</CustomField>