force-app/main/default/objects/Opportunity/fields/pse__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>pse__BatchProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NOT TO PACKAGE. Only for unit test</description>
    <label>Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>