force-app/main/default/objects/Opportunity/fields/pse__Is_Services_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Services_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this is a services opportunity</inlineHelpText>
    <label>Is Services Opportunity</label>
    <type>Checkbox</type>
</CustomField>