force-app/main/default/objects/Opportunity/fields/pse__Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>