force-app/main/default/objects/Opportunity/fields/pse__Services_Attached_Percent_From_Products__c.field-meta.xml
<CustomField>
    <fullName>pse__Services_Attached_Percent_From_Products__c</fullName>
    <formula>IF (Amount = 0, 0 , pse__Services_Attached_From_Products__c / Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Attached % From Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>