force-app/main/default/objects/Opportunity/fields/Qty_ordered__c.field-meta.xml
<CustomField>
    <fullName>Qty_ordered__c</fullName>
    <label>Qty ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>