force-app/main/default/objects/Opportunity/fields/R_Resources__c.field-meta.xml
<CustomField>
    <fullName>R_Resources__c</fullName>
    <inlineHelpText>Have resources been assigned to support this yet? 
Is this budgeted for? 
Do you have an executive sponsor, project/program leader? 
Are there any full time resources expected to lead this effort?</inlineHelpText>
    <label>R-Resources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>