force-app/main/default/objects/Opportunity/fields/Requested_Training_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Training_Start_Date__c</fullName>
    <label>Requested Training Start Date</label>
    <type>Date</type>
</CustomField>