force-app/main/default/objects/Opportunity/fields/Requested_Venue__c.field-meta.xml
<CustomField>
    <fullName>Requested_Venue__c</fullName>
    <label>Requested Venue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airlie</fullName>
            </value>
            <value>
                <fullName>Atlanta Evergreen Resort</fullName>
            </value>
            <value>
                <fullName>Chaminade</fullName>
            </value>
            <value>
                <fullName>Chateau Elan</fullName>
            </value>
            <value>
                <fullName>Cheyenne Mountain</fullName>
            </value>
            <value>
                <fullName>Dolce Norwalk</fullName>
            </value>
            <value>
                <fullName>Doral Arrowwood</fullName>
            </value>
            <value>
                <fullName>Eaglewood</fullName>
            </value>
            <value>
                <fullName>Éilan Hotel &amp; Spa</fullName>
            </value>
            <value>
                <fullName>Garden of the Gods</fullName>
            </value>
            <value>
                <fullName>Grand Geneva</fullName>
            </value>
            <value>
                <fullName>Hilton Denver Inverness</fullName>
            </value>
            <value>
                <fullName>Lakeway</fullName>
            </value>
            <value>
                <fullName>Lansdowne</fullName>
            </value>
            <value>
                <fullName>La Torretta</fullName>
            </value>
            <value>
                <fullName>Mission Inn</fullName>
            </value>
            <value>
                <fullName>Nationwide</fullName>
            </value>
            <value>
                <fullName>Omni Barton Creek</fullName>
            </value>
            <value>
                <fullName>Omni Interlocken</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Scottsdale Resort</fullName>
            </value>
            <value>
                <fullName>Seascape</fullName>
            </value>
            <value>
                <fullName>Skamania</fullName>
            </value>
            <value>
                <fullName>Tarrytown</fullName>
            </value>
            <value>
                <fullName>Tarrytown House</fullName>
            </value>
            <value>
                <fullName>Temecula Creek</fullName>
            </value>
            <value>
                <fullName>The Gaylord Texan</fullName>
            </value>
            <value>
                <fullName>The Grove</fullName>
            </value>
            <value>
                <fullName>Turnberry Resort</fullName>
            </value>
            <value>
                <fullName>Villas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>