force-app/main/default/objects/Opportunity/fields/Residential_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Residential_Delivery__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; only when GNDHOME is selected.  All other types select &quot;No&quot; or leave empty.</inlineHelpText>
    <label>Residential Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>