force-app/main/default/objects/Opportunity/fields/Room_block_attrition__c.field-meta.xml
<CustomField>
    <fullName>Room_block_attrition__c</fullName>
    <label>Room block attrition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>