force-app/main/default/objects/Opportunity/fields/Rooming_list_due_date__c.field-meta.xml
<CustomField>
    <fullName>Rooming_list_due_date__c</fullName>
    <label>Rooming list due date</label>
    <type>Date</type>
</CustomField>