force-app/main/default/objects/Opportunity/fields/Rooming_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rooming_Notes__c</fullName>
    <label>Rooming Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>