force-app/main/default/objects/Opportunity/fields/S_Solution__c.field-meta.xml
<CustomField>
    <fullName>S_Solution__c</fullName>
    <inlineHelpText>How can we help you? 
What&apos;s your reason for contacting Prosci 
What problem are you trying to solve? 
What&apos;s the business outcome you&apos;re looking to achieve? 
How would you describe the job to be done? 
What does success look like?</inlineHelpText>
    <label>S-Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>