force-app/main/default/objects/Opportunity/fields/Salesperson_Code__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Code__c</fullName>
    <formula>Owner.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesperson Code</label>
    <type>Text</type>
</CustomField>