force-app/main/default/objects/Opportunity/fields/Scholarship_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Application_Type__c</fullName>
    <label>Scholarship Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JJ Johnson</fullName>
            </value>
            <value>
                <fullName>Change for the Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>