force-app/main/default/objects/Opportunity/fields/Scholarship_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Expiration_Date__c</fullName>
    <label>Scholarship Expiration Date</label>
    <type>Date</type>
</CustomField>