force-app/main/default/objects/Opportunity/fields/Sell_To__c.field-meta.xml
<CustomField>
    <fullName>Sell_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell To:</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Sell To:)</relationshipLabel>
    <relationshipName>Sell_To</relationshipName>
    <type>Lookup</type>
</CustomField>