force-app/main/default/objects/Opportunity/fields/Sell_To_City__c.field-meta.xml
<CustomField>
    <fullName>Sell_To_City__c</fullName>
    <label>Sell To City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>