force-app/main/default/objects/Opportunity/fields/Sell_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sell_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Sell To Contact)</relationshipLabel>
    <relationshipName>Sell_To_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>