force-app/main/default/objects/Opportunity/fields/Sell_to_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Contact_No__c</fullName>
    <formula>Sell_To_Contact__r.Contact_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell to Contact No</label>
    <type>Text</type>
</CustomField>