force-app/main/default/objects/Opportunity/fields/Sell_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Sell_To_Country__c</fullName>
    <label>Sell To Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>