force-app/main/default/objects/Opportunity/fields/Sell_to_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Customer_No__c</fullName>
    <formula>Sell_To__r.Account_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell to Customer No.</label>
    <type>Text</type>
</CustomField>