force-app/main/default/objects/Opportunity/fields/Sell_to_State__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_State__c</fullName>
    <label>Sell to State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>