force-app/main/default/objects/Opportunity/fields/Sell_To_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Sell_To_Street_2__c</fullName>
    <label>Sell To Street 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>