force-app/main/default/objects/Opportunity/fields/Sell_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Sell_To_Street__c</fullName>
    <inlineHelpText>This information populates from the company address (left side) on the account page or straight from the information they put in the order form.</inlineHelpText>
    <label>Sell To Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>