force-app/main/default/objects/Opportunity/fields/Sell_to_Zip__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Zip__c</fullName>
    <label>Sell to Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>