force-app/main/default/objects/Opportunity/fields/Senior_Change_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Senior_Change_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Change Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Senior Change Advisor)</relationshipLabel>
    <relationshipName>OpportunitiesQRsO</relationshipName>
    <type>Lookup</type>
</CustomField>