force-app/main/default/objects/Opportunity/fields/Senior_Principal_Change_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Senior_Principal_Change_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Principal Change Advisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Senior Principal Change Advisor)</relationshipLabel>
    <relationshipName>OpportunitiesQRtg</relationshipName>
    <type>Lookup</type>
</CustomField>