force-app/main/default/objects/Opportunity/fields/Ship_to_address_for_License_box__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_address_for_License_box__c</fullName>
    <label>Ship to address for License box</label>
    <type>TextArea</type>
</CustomField>