force-app/main/default/objects/Opportunity/fields/Ship_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Contact:</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Ship To Contact:)</relationshipLabel>
    <relationshipName>Ship_To_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>