force-app/main/default/objects/Opportunity/fields/Ship_to_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Country__c</fullName>
    <label>Ship To Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>