force-app/main/default/objects/Opportunity/fields/Ship_To_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Email_1__c</fullName>
    <label>Ship To Email (1)</label>
    <type>Email</type>
</CustomField>