force-app/main/default/objects/Opportunity/fields/Ship_To_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Email_2__c</fullName>
    <label>Ship To Email (2)</label>
    <type>Email</type>
</CustomField>