force-app/main/default/objects/Opportunity/fields/Ship_To_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Phone_Number__c</fullName>
    <formula>Ship_To_Contact__r.Contact_Primary_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Phone Number</label>
    <type>Text</type>
</CustomField>