force-app/main/default/objects/Opportunity/fields/Ship_to_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_State__c</fullName>
    <label>Ship To State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>