force-app/main/default/objects/Opportunity/fields/Ship_To_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street_2__c</fullName>
    <label>Ship To Street 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>