force-app/main/default/objects/Opportunity/fields/Ship_to_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Street__c</fullName>
    <inlineHelpText>This information populates from the contact address (left side) on the contact record</inlineHelpText>
    <label>Ship To Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>