force-app/main/default/objects/Opportunity/fields/Ship_to_Zip__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Zip__c</fullName>
    <label>Ship To Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>