force-app/main/default/objects/Opportunity/fields/Shipment_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Tracking_URL__c</fullName>
    <label>Shipment Tracking URL</label>
    <type>Url</type>
</CustomField>