force-app/main/default/objects/Opportunity/fields/Shipping_Payment_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Payment_Account_No__c</fullName>
    <label>Shipping Payment Account No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>